--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <script src="./script.js"></script>
             <span>days</span>
         </h1>
+        <p>All started on 17 October 2021</p>
     </div>
 </body>
 
