--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body onclick="onReady()">
     <div class="main_container">
         <h1 class="title">Tik Tik</h1>
-        <p>The Troble is,<br>you think you have time</p>
+        <p>The Trouble is,<br>you think you have time</p>
         <h1 class="time_title">
             <strong id="day">335</strong>&nbsp;
             <script src="./script.js"></script>
